kubernetes/apps/media/seerr/app/httproute-ombi-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-ombi-redirect
  namespace: media
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - ombi.shadowmorph.info
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: seerr.shadowmorph.info
            statusCode: 301
