kubernetes/apps/media/seerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: media
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "https://seerr.shadowmorph.info"
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Seerr
    gethomepage.dev/icon: overseerr.png
    gethomepage.dev/href: https://seerr.shadowmorph.info
    gethomepage.dev/pod-selector: app.kubernetes.io/name=seerr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - seerr.shadowmorph.info
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
      backendRefs:
        - group: ""
          kind: Service
          name: seerr
          port: 5055
          weight: 1
